# easyloggingpp

./: CMakeLists.txt
cmake/: easyloggingpp-config.cmake
src/: easylogging++.h
